--- a/Source/ExcelDna.Registration/ExcelDna.Registration.csproj
+++ b/Source/ExcelDna.Registration/ExcelDna.Registration.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ExcelDna.Integration, Version=1.0.7056.37028, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ExcelDna.Integration.1.0.0\lib\ExcelDna.Integration.dll</HintPath>
+    <Reference Include="ExcelDna.Integration, Version=1.1.0.0, Culture=neutral, PublicKeyToken=f225e9659857edbe, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExcelDna.Integration.1.1.0-beta1\lib\ExcelDna.Integration.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
