--- a/Source/ExcelDna.Registration/packages.config
+++ b/Source/ExcelDna.Registration/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.Integration" version="1.1.0" targetFramework="net40" />
+  <package id="ExcelDna.Integration" version="1.2.0-preview1" targetFramework="net40" />
 </packages>
