--- a/Source/Samples/Registration.Sample.FSharp/packages.config
+++ b/Source/Samples/Registration.Sample.FSharp/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.AddIn" version="1.1.0" targetFramework="net45" developmentDependency="true" />
-  <package id="ExcelDna.Integration" version="1.1.0" targetFramework="net45" />
+  <package id="ExcelDna.AddIn" version="1.2.0-preview1" targetFramework="net45" developmentDependency="true" />
+  <package id="ExcelDna.Integration" version="1.2.0-preview1" targetFramework="net45" />
   <package id="FSharp.Core" version="4.7.2" targetFramework="net45" />
 </packages>
