--- a/Source/Test/packages.config
+++ b/Source/Test/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExcelDna.Integration" version="1.1.0" targetFramework="net451" />
+  <package id="ExcelDna.Integration" version="1.2.0-preview1" targetFramework="net451" />
   <package id="NUnit" version="3.12.0" targetFramework="net451" />
 </packages>
